deploy/internal/deployment-endpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noobaa
  name: noobaa-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      noobaa-s3: noobaa
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        noobaa-s3: noobaa
        app: noobaa
      annotations:
        noobaa.io/configmap-hash: ""
    spec:
      # Notice that changing the serviceAccountName would need to update existing AWS STS role trust policy for customers
      serviceAccountName: noobaa-endpoint
      volumes:
        - name: mgmt-secret
          secret:
            secretName: noobaa-mgmt-serving-cert
            optional: true
        - name: s3-secret
          secret:
            secretName: noobaa-s3-serving-cert
            optional: true
        - name: sts-secret
          secret:
            secretName: noobaa-sts-serving-cert
            optional: true
        - name: iam-secret
          secret:
            secretName: noobaa-iam-serving-cert
            optional: true
        - name: vector-secret
          secret:
            secretName: noobaa-vector-serving-cert
            optional: true
        # This service account token can be used to provide identity outside the cluster.
        # For example, this token can be used with AWS(AssumeRoleWithWebIdentity)/Azure(WorkloadIdentityCredential) 
        # to authenticate with AWS/Azure using IAM OIDC provider and STS.
        - name: bound-sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  # For testing purposes change the audience to api
                  audience: openshift
        - name: noobaa-auth-token
          secret:
            secretName: noobaa-endpoints
            optional: true
        - name: noobaa-server
          secret:
            secretName: noobaa-server
            optional: true
      containers:
        - name: endpoint
          image: NOOBAA_CORE_IMAGE
          terminationMessagePolicy: FallbackToLogsOnError
          command:
            - /noobaa_init_files/noobaa_init.sh
            - init_endpoint
          resources:
            requests:
              cpu: "999m"
              memory: "2Gi"
            limits:
              cpu: "999m"
              memory: "2Gi"
          securityContext:
            fsGroupChangePolicy: "OnRootMismatch"
            seLinuxOptions:
              type: "spc_t"
            capabilities:
              add: ["SETUID", "SETGID"]
          ports:
            - containerPort: 6001
            - containerPort: 6443
            - containerPort: 7443
            - containerPort: 13443
              name: iam-https
            - containerPort: 14443
              name: vector-https
          volumeMounts:
            # curently ssl_utils expects both secrets to be configured in order to use
            # certificates. TODO: Allow each secret to be configured by intself.
            - name: mgmt-secret
              mountPath: /etc/mgmt-secret
              readOnly: true
            - name: s3-secret
              mountPath: /etc/s3-secret
              readOnly: true
            - name: noobaa-auth-token
              mountPath: /etc/noobaa-auth-token
              readOnly: true
            - name: noobaa-server
              mountPath: /etc/noobaa-server
              readOnly: true
            - name: iam-secret
              mountPath: /etc/iam-secret
              readOnly: true
            - name: sts-secret
              mountPath: /etc/sts-secret
              readOnly: true
            - name: vector-secret
              mountPath: /etc/vector-secret
              readOnly: true
            # used for aws sts endpoint type
            - name: bound-sa-token
              mountPath: /var/run/secrets/openshift/serviceaccount
              readOnly: true
          readinessProbe: # must be configured to support rolling updates
            tcpSocket:
              port: 6001 # ready when s3 port is open
            timeoutSeconds: 5
      securityContext:
        runAsUser: 0
        runAsGroup: 0
