deploy/internal/route-vector.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: noobaa
  name: vector
spec:
  port:
    targetPort: vector-https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: vector
    weight: 100
  wildcardPolicy: None
